# sound-blog

./: .gitignore  data.json  makefile  manage.py  mysite_data.json  package-lock.json  package.json  pyproject.toml  requirements.txt
account/: forms.py  urls.py  views.py
account/templates/: base.html
account/templates/account/: dashboard.html  login.html
account/templates/registration/: logged_out.html  login.html
blog/: admin.py  feeds.py  forms.py  models.py  sitemaps.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_post_slug.py  0003_comment.py  0004_post_tags.py  0005_trigram_ext.py  0006_remove_comment_name_comment_author.py
blog/static/: output.css  tailwind.css
blog/static/css/: blog.css
blog/static/js/: blog.js
blog/templates/: pagination.html
blog/templates/blog/: base.html  navbar.html  sidebar.html
blog/templates/blog/post/: comment.html  detail.html  latest_posts.html  list.html  search.html  share.html
blog/templates/blog/post/includes/: comment_form.html  footer.html  navbar.html
blog/templatetags/: blog_tags.py
project/: settings.py  urls.py
