[project]
name = "sound-blog"
version = "0.1.0"
description = ""
authors = [
    {name = "americo",email = "americo@home.com"}
]
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "annotated-types==0.7.0",
    "asgiref==3.8.1",
    "click==8.1.8",
    "colorama==0.4.6",
    "cssbeautifier==1.15.3",
    "Django==5.1.6",
    "django-browser-reload==1.18.0",
    "django-dotenv==1.4.2",    
    "EditorConfig==0.17.0",
    "jsbeautifier==1.15.3",
    "json5==0.10.0",
    "pathspec==0.12.1",
    "pydantic==2.10.6",
    "pydantic_core==2.27.2",
    "PyYAML==6.0.2",
    "regex==2024.11.6",
    "six==1.17.0",
    "sqlparse==0.5.3",
    "tqdm==4.67.1",
    "typing_extensions==4.12.2",
    "python-decouple (>=3.8,<4.0)",
    "django-taggit (>=6.1.0,<7.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
djlint = "^1.36.4"

