[project]
name = "sound-blog"
version = "0.1.0"
description = ""
authors = [
    {name = "americo",email = "americo@home.com"}
]
license = {text = "MIT"}
requires-python==3.12"
dependencies = [
    "annotated-types==0.7.0",
    "asgiref==3.8.1",
    "Django==5.1.6",        
    "EditorConfig==0.17.0",
    "pydantic==2.10.6",
    "pydantic_core==2.27.2",
    "six==1.17.0",
    "sqlparse==0.5.3",
    "typing_extensions==4.12.2",
    "python-decouple (>=3.8,<4.0)",
    "django-taggit (>=6.1.0,<7.0.0)",
    "markdown (>=3.7,<4.0)",
]



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
"django-browser-reload==1.18.0",
"djlint==1.36.4"
"click==8.0.1"
"colorama==0.4.4"
"cssbeautifier==1.14.4"
"jsbeautifier==1.14.4"
"json5==0.9.11"
"pathspec==0.12"
"pyyaml==6"
"regex==2023"
"tqdm==4.62.2"
