[project]
name = "sound-blog"
version = "0.1.0"
description = ""
authors = [
    {name = "americobcn",email = "americo.cot@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.1.6,<6.0.0)",
    "django-taggit (>=6.1.0,<7.0.0)",
    "psycopg[binary] (>=3.2.5,<4.0.0)",
    "markdown (>=3.7,<4.0)",
    "python-decouple (>=3.8,<4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
djlint = "^1.36.4"
django-browser-reload = "^1.18.0"

